changement de layout

--- a/app/src/main/res/layout/fragment_match.xml
+++ b/app/src/main/res/layout/fragment_match.xml
@@ -22,28 +22,185 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="609dp"
+                android:layout_height="350dp"
+                android:background="@color/background">
+
+
+                <EditText
+                    android:id="@+id/Critique"
+                    android:layout_width="217dp"
+                    android:layout_height="48dp"
+                    android:layout_marginEnd="28dp"
+                    android:layout_marginRight="28dp"
+                    android:layout_marginBottom="16dp"
+                    android:background="@color/white"
+                    android:ems="10"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+
+                <TextView
+                    android:id="@+id/critique"
+                    android:layout_width="87dp"
+                    android:layout_height="0dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginBottom="32dp"
+                    android:ems="10"
+                    android:text="@string/critique"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <SeekBar
+                    android:id="@+id/seekBarStrength"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="302dp"
+                    android:layout_height="24dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginRight="4dp"
+                    android:max="10"
+                    android:progress="0"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/seekBarScore" />
+
+                <TextView
+                    android:id="@+id/TestScore"
+                    android:layout_width="87dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="32dp"
+                    android:text="@string/Technique"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+
+                <SeekBar
+                    android:id="@+id/seekBarScore"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="302dp"
+                    android:layout_height="26dp"
+                    android:layout_marginTop="24dp"
+                    android:max="10"
+                    android:progress="0"
+                    app:layout_constraintStart_toEndOf="@+id/TestScore"
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+
+                <TextView
+                    android:id="@+id/TestStrength"
+                    android:layout_width="87dp"
+                    android:layout_height="17dp"
+                    android:layout_marginTop="16dp"
+                    android:ems="10"
+                    android:text="@string/Strengh"
+                    app:layout_constraintEnd_toStartOf="@+id/seekBarStrength"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/TestScore" />
+
+                <EditText
+                    android:id="@+id/Name2"
+                    android:layout_width="151dp"
+                    android:layout_height="43dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="@string/AddName2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraintLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="108dp"
+                    android:background="#C4C8DD"
+                    android:tag="First_Fragment"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:context=".ui.Match">
+
+
+                    <TextView
+                        android:id="@+id/TextScore1"
+                        android:layout_width="109dp"
+                        android:layout_height="25dp"
+                        android:background="@color/background"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="16dp"
+                        android:ems="10"
+                        android:text="@string/Score1"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <NumberPicker
+                        android:id="@+id/Score1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:layout_marginLeft="4dp"
+                        android:textAlignment="center"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/TextScore1">
+
+                    </NumberPicker>
+
+                    <NumberPicker
+                        android:id="@+id/Score2"
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent">
+
+                    </NumberPicker>
+
+                    <TextView
+                        android:id="@+id/TextScore2"
+                        android:layout_width="109dp"
+                        android:layout_height="25dp"
+                        android:layout_marginStart="212dp"
+                        android:layout_marginLeft="212dp"
+                        android:layout_marginTop="16dp"
+                        android:background="@color/background"
+                        android:ems="10"
+                        android:text="@string/Score2"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"></TextView>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <EditText
+                    android:id="@+id/Name1"
+                    android:layout_width="151dp"
+                    android:layout_height="41dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="24dp"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="@string/AddName1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
                 android:background="@color/background"
                 android:tag="First_Fragment"
-                app:layout_constraintEnd_toEndOf="@+id/Name1"
-                app:layout_constraintStart_toEndOf="@+id/Name1"
                 tools:context=".ui.Match">
 
-
-                <NumberPicker
-                    android:id="@+id/Score2"
-                    android:layout_width="40dp"
-                    android:layout_height="30dp"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginLeft="12dp"
-                    android:layout_marginTop="28dp"
-                    android:textAlignment="center"
-                    android:scaleX="1.5"
-                    android:scaleY="1.5"
-                    app:layout_constraintStart_toEndOf="@+id/TextScore2"
-                    app:layout_constraintTop_toBottomOf="@+id/seekBarStrength">
-
-                </NumberPicker>
 
                 <Button
                     android:id="@+id/button_first"
@@ -69,71 +226,9 @@
                     app:layout_constraintTop_toBottomOf="@+id/button"
                     app:layout_constraintVertical_bias="0.0" />
 
-                <EditText
-                    android:id="@+id/Critique"
-                    android:layout_width="217dp"
-                    android:layout_height="48dp"
-                    android:layout_marginTop="120dp"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginRight="32dp"
-                    android:background="@color/white"
-                    android:ems="10"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/seekBarScore" />
 
-                <TextView
-                    android:id="@+id/critique"
-                    android:layout_width="87dp"
-                    android:layout_height="0dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginBottom="156dp"
-                    android:ems="10"
-                    android:text="@string/critique"
-                    app:layout_constraintBottom_toTopOf="@+id/button"
-                    app:layout_constraintStart_toStartOf="parent" />
 
-                <TextView
-                    android:id="@+id/TextScore2"
-                    android:layout_width="109dp"
-                    android:layout_height="25dp"
-                    android:layout_marginStart="224dp"
-                    android:layout_marginLeft="224dp"
-                    android:layout_marginTop="30dp"
-                    android:ems="10"
-                    android:text="@string/Score2"
-                    android:textColor="@color/black"
-                    android:textSize="15dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/seekBarStrength" />
 
-                <TextView
-                    android:id="@+id/TextScore1"
-                    android:layout_width="109dp"
-                    android:layout_height="25dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="44dp"
-                    android:ems="10"
-                    android:text="@string/Score1"
-                    android:textColor="@color/black"
-                    android:textSize="15dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/TestStrength" />
-
-                <SeekBar
-                    android:id="@+id/seekBarStrength"
-                    style="@style/Widget.AppCompat.SeekBar.Discrete"
-                    android:layout_width="302dp"
-                    android:layout_height="24dp"
-                    android:layout_marginTop="43dp"
-                    android:layout_marginBottom="416dp"
-                    android:max="10"
-                    android:progress="0"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/seekBarScore"
-                    app:layout_constraintVertical_bias="0.0" />
 
                 <Button
                     android:id="@+id/button"
@@ -157,81 +252,6 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
 
-                <TextView
-                    android:id="@+id/TestScore"
-                    android:layout_width="87dp"
-                    android:layout_height="17dp"
-                    android:layout_marginStart="@dimen/match2"
-                    android:layout_marginLeft="0dp"
-                    android:layout_marginTop="28dp"
-                    android:text="@string/Technique"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/Name1" />
-
-                <SeekBar
-                    android:id="@+id/seekBarScore"
-                    style="@style/Widget.AppCompat.SeekBar.Discrete"
-                    android:layout_width="302dp"
-                    android:layout_height="26dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginLeft="12dp"
-                    android:layout_marginTop="28dp"
-                    android:max="10"
-                    android:progress="0"
-                    app:layout_constraintStart_toEndOf="@+id/TestScore"
-                    app:layout_constraintTop_toBottomOf="@+id/Name2" />
-
-                <TextView
-                    android:id="@+id/TestStrength"
-                    android:layout_width="87dp"
-                    android:layout_height="17dp"
-                    android:layout_marginTop="38dp"
-                    android:ems="10"
-                    android:text="@string/Strengh"
-                    app:layout_constraintEnd_toStartOf="@+id/seekBarStrength"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/TestScore" />
-
-                <EditText
-                    android:id="@+id/Name1"
-                    android:layout_width="151dp"
-                    android:layout_height="41dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="24dp"
-                    android:ems="10"
-                    android:inputType="textPersonName"
-                    android:text="@string/AddName1"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <NumberPicker
-                    android:id="@+id/Score1"
-                    android:layout_width="60dp"
-                    android:layout_height="30dp"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginLeft="24dp"
-                    android:layout_marginTop="28dp"
-                    android:textAlignment="center"
-                    android:scaleX="1.5"
-                    android:scaleY="1.5"
-                    app:layout_constraintStart_toEndOf="@+id/TextScore1"
-                    app:layout_constraintTop_toBottomOf="@+id/seekBarStrength">
-
-                </NumberPicker>
-
-                <EditText
-                    android:id="@+id/Name2"
-                    android:layout_width="151dp"
-                    android:layout_height="43dp"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginRight="16dp"
-                    android:ems="10"
-                    android:inputType="textPersonName"
-                    android:text="@string/AddName2"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/guideline2"
