--- a/app/src/main/res/layout/fragment_match.xml
+++ b/app/src/main/res/layout/fragment_match.xml
@@ -30,8 +30,8 @@
                     android:id="@+id/Critique"
                     android:layout_width="217dp"
                     android:layout_height="48dp"
-                    android:layout_marginEnd="28dp"
-                    android:layout_marginRight="28dp"
+                    android:layout_marginEnd="@dimen/match8"
+                    android:layout_marginRight="@dimen/match8"
                     android:layout_marginBottom="16dp"
                     android:background="@color/white"
                     android:ems="10"
@@ -57,8 +57,8 @@
                     android:layout_width="302dp"
                     android:layout_height="24dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginEnd="4dp"
-                    android:layout_marginRight="4dp"
+                    android:layout_marginEnd="@dimen/match7"
+                    android:layout_marginRight="@dimen/match7"
                     android:max="10"
                     android:progress="0"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -101,8 +101,8 @@
                     android:layout_width="151dp"
                     android:layout_height="43dp"
                     android:layout_marginTop="24dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginEnd="@dimen/match3"
+                    android:layout_marginRight="@dimen/match3"
                     android:ems="10"
                     android:inputType="textPersonName"
                     android:text="@string/AddName2"
@@ -128,8 +128,8 @@
                         android:layout_width="109dp"
                         android:layout_height="25dp"
                         android:background="@color/background"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginLeft="16dp"
+                        android:layout_marginStart="@dimen/match6"
+                        android:layout_marginLeft="@dimen/match6"
                         android:layout_marginTop="16dp"
                         android:ems="10"
                         android:text="@string/Score1"
@@ -156,6 +156,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
+                        android:layout_marginRight="@dimen/match5"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent">
 
@@ -165,8 +166,8 @@
                         android:id="@+id/TextScore2"
                         android:layout_width="109dp"
                         android:layout_height="25dp"
-                        android:layout_marginStart="212dp"
-                        android:layout_marginLeft="212dp"
+                        android:layout_marginStart="@dimen/match4"
+                        android:layout_marginLeft="@dimen/match4"
                         android:layout_marginTop="16dp"
                         android:background="@color/background"
                         android:ems="10"
@@ -182,8 +183,8 @@
                     android:id="@+id/Name1"
                     android:layout_width="151dp"
                     android:layout_height="41dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="@dimen/match3"
+                    android:layout_marginLeft="@dimen/match3"
                     android:layout_marginTop="24dp"
                     android:ems="10"
                     android:inputType="textPersonName"
