--- a/app/src/main/res/layout/fragment_select_match.xml
+++ b/app/src/main/res/layout/fragment_select_match.xml
@@ -69,7 +69,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
 
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="20dp"
 
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
@@ -78,6 +78,7 @@
                 android:textColor="@color/purple_700"
                 android:textSize="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -143,7 +144,7 @@
                 android:layout_height="25dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="26dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="10dp"
@@ -154,7 +155,8 @@
                 app:layout_constraintBottom_toTopOf="@+id/textName2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/textName2"
@@ -165,8 +167,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.142"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView7" />
+                app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:id="@+id/textName4"
