--- a/app/src/main/res/layout/fragment_stat.xml
+++ b/app/src/main/res/layout/fragment_stat.xml
@@ -45,7 +45,7 @@
         android:layout_marginStart="@dimen/stat4"
         android:layout_marginLeft="@dimen/stat4"
         android:layout_marginTop="36dp"
-        android:text="@string/Score"
+        android:text="@string/Technique"
         android:textAlignment="gravity"
         android:textColor="@color/purple_700"
         android:textSize="25dp"
