--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,3 +1,4 @@
+<!-- Theme couleurs de jour -->
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.Projet20" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
