--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,3 +1,4 @@
+<!-- Theme couleurs de nuit-->
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.Projet20" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
